@@ -1,6 +1,9 @@
 Revision history for Perl extension Math::Polynomial::Solve.
 
 2.62_3
+     Jul 10 2012
+	- Comment and Smart-Comment changes. Also removed the late
+	  Nick Ing-Simmons's e-mail address from comments.
      Jul 5  2012
 	- Changed the first Fortran-style down-count loop in
 	  hqr_eigen_hessenberg() to a Perl-style loop using reverse.
